Colab을 통해 생성됨

--- a/finalproject_g1.ipynb
+++ b/finalproject_g1.ipynb
@@ -30,6 +30,23 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "|Word list|Meaning|\n",
+        "|----|-------|\n",
+        "|Vibrant|활기찬|\n",
+        "|Ancient|아주 오래된|\n",
+        "|Dismiss|무시하다|\n",
+        "|Scholarship|장학금|\n",
+        "|Competition|대회|\n",
+        "|Skeptics|의심하는 사람|\n",
+        "|Donation|기부|"
+      ],
+      "metadata": {
+        "id": "w8qIS_PCziuf"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "_jPLSQyws8f2"
       },
@@ -911,7 +928,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## (2) Check the understanding of participial construction"
+        "### (2) Check the understanding of participial construction"
       ],
       "metadata": {
         "id": "ibpi64P6bstP"
@@ -1094,7 +1111,7 @@
         "id": "8JVllKpll6YH"
       },
       "source": [
-        "# ✏️ Summarize the story with the words in the two pictures above\n",
+        "# ✏️ Summarize the story with the words in the two images above\n",
         "###1.   Within five sentences including participial constructions\n",
         "###2.   Check your grammar\n",
         "[Grammarly link](https://app.grammarly.com/ddocs/2497836544)\n",
