Colab을 통해 생성됨

--- a/finalproject_g1_최종.ipynb
+++ b/finalproject_g1_최종.ipynb
@@ -46,6 +46,48 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from IPython.display import IFrame\n",
+        "\n",
+        "# IFrame(url, width, height)\n",
+        "IFrame('https://time-stuff.com/embed.html', width=1400, height=1000)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "id": "Td34ePKMqOND",
+        "outputId": "3a8cf0b7-d3e5-4105-b6c4-1f6502b5bbb0"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<IPython.lib.display.IFrame at 0x7cc010423520>"
+            ],
+            "text/html": [
+              "\n",
+              "        <iframe\n",
+              "            width=\"1400\"\n",
+              "            height=\"1000\"\n",
+              "            src=\"https://time-stuff.com/embed.html\"\n",
+              "            frameborder=\"0\"\n",
+              "            allowfullscreen\n",
+              "            \n",
+              "        ></iframe>\n",
+              "        "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "_jPLSQyws8f2"
@@ -1114,7 +1156,7 @@
         "# ✏️ Summarize the story with the words in the two images above\n",
         "###1.   Within five sentences including participial constructions\n",
         "###2.   Check your grammar\n",
-        "[Grammarly link](https://app.grammarly.com/ddocs/2498914732)\n",
+        "[Grammarly link](https://app.grammarly.com/ddocs/2498920919)\n",
         "###3.   Post on Padlet\n"
       ]
     },
